[package]
name = "lapras"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "protocol"
path = "src/protocol/lib.rs"

[dependencies]
rustyline = "15.0.0"
env_logger = "0.11.6"
flate2 = "1.0.35"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.135"
clap = { version = "4.5.26", features = ["derive"] }
shlex = "1.3.0"
tar = "0.4.43"
systemstat = "0.2.4"
glob = "0.3.2"
rand = "0.8.5"
